fix: board button contrast on hover

--- a/src/components/BoardButton/BoardButton.css
+++ b/src/components/BoardButton/BoardButton.css
@@ -28,6 +28,10 @@
   opacity: 0;
 }
 
+.BoardButton:hover::after {
+  opacity: 0.8;
+}
+
 .BoardButton:active::after {
   opacity: 1;
 }
